Adds Stylua to CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,12 +3,27 @@ on: [push, pull_request]
 name: main
 
 jobs:
-  test:
+
+  stylua:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         nvim-versions: ["stable", "nightly"]
-    name: test
+    name: Stylua
+    steps:
+      - uses: actions/checkout@v3
+      - uses: JohnnyMorganz/stylua-action@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
+          args: --check .
+
+  tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        nvim-versions: ["stable", "nightly"]
+    name: Tests
     steps:
       - name: checkout
         uses: actions/checkout@v3
