Fixes multiline strings for Telescope
Fixes #22

--- a/tests/sample.yaml
+++ b/tests/sample.yaml
@@ -9,5 +9,13 @@ worldcup:
   semifinals:
     - brazil: 1
       germany: 7
+      details:
+        - {
+            stadium: Mineirão
+          }
     - nederland: 0
       argentina: 0
+      details:
+        - {
+             stadium: Itaquerão
+          }
